--- a/1_Generalidades.ipynb
+++ b/1_Generalidades.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/1_Generalidades.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MaiaKaralieva/Python-Basics/blob/main/1_Generalidades.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -42,7 +42,9 @@
         "id": "fd9c74f9-3a6a-4e1a-a169-edaac115c054"
       },
       "source": [
-        "# Generalidades texto"
+        "# Generalidades texto (update)\n",
+        "\n",
+        "\n"
       ],
       "id": "fd9c74f9-3a6a-4e1a-a169-edaac115c054"
     },
@@ -69,10 +71,11 @@
         "\n",
         "%matplotlib inline\n",
         "\n",
-        "pd.set_option('display.max_columns', None)"
+        "pd.set_option('display.max_columns', None)\n",
+        "print(f'Hola Témoc')"
       ],
       "id": "b9caadd9-4f88-44bb-abf7-9d1ff05b198a",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +169,7 @@
         "Image(r\"../img/distribucion_lluvia_AU.jpg\")"
       ],
       "id": "e359e33a-e00b-4bf0-8abf-9e3134e6e950",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,7 +266,7 @@
         "    return df"
       ],
       "id": "386a6889-8b84-46fc-b925-4a0e846d5bbf",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +279,7 @@
         "df = read_weather(r'/content/drive/MyDrive/Colab Notebooks/Precipitation-Australia/data/weatherAUS.csv')"
       ],
       "id": "213e6ff1-d8f6-46fe-bd55-a287111b33e3",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +295,7 @@
         "df.shape"
       ],
       "id": "68d22e34-5989-4d5e-ab2a-8e6694f45300",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -330,7 +333,7 @@
         "df.head()"
       ],
       "id": "deae9816-9fad-47e9-aaec-3a9bd180b529",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,7 +577,7 @@
         "print(df.info())"
       ],
       "id": "c9ceb913-5aee-43c9-8e40-4a86ef034f83",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +644,7 @@
         "df.describe()"
       ],
       "id": "vr64w8sMM3y8",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -938,7 +941,7 @@
         "round(df.groupby('RainTomorrow')['RainTomorrow'].count() / df['RainTomorrow'].count() * 100, 2)"
       ],
       "id": "de23c1a9-243b-41f1-97fa-fd15d9c31130",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
