--- a/1_Tipos_de_datos_básicos.ipynb
+++ b/1_Tipos_de_datos_básicos.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1M0Bi6-x7TXZcIIGK32q-v4kPDE7QbWVL",
-      "authorship_tag": "ABX9TyMDq8DtxcofVvHZ/oYUeZfg",
+      "authorship_tag": "ABX9TyNHgPGo353CUwGW7XRGUC7r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "Se pueden represtarn con letras, palabras completas. Ej.\n",
         "\n",
         "- x = 1\n",
-        "- y = 2.0\n",
+        "- precio_dolar = 19.94\n",
         "- capital_mexico = \"cdmx\"\n",
         "- bebo_poco = True\n",
         "\n",
@@ -71,274 +71,567 @@
       }
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ya_NFZO-3mBl"
-      },
+      "cell_type": "markdown",
       "source": [
-        "# !cp /content/drive/MyDrive/Colab\\ Notebooks/Python\\ Basics/1.Python\\ basics\\ -\\ Introducción.ipynb ./"
+        "### Tipo int"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "lSptwM-1uJpF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "entero = 124"
+      ],
+      "metadata": {
+        "id": "ddr_Tf7HtPsp"
+      },
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "RqU0SIR442Yp"
-      },
       "source": [
-        "# !jupyter nbconvert --to html \"1.Python_basics.ipynb\""
+        "print(entero)"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
-        "id": "rcnfIrI2iyU5"
-      },
-      "source": [
-        "!ls"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "B-ywbICJfe9Q"
-      },
-      "source": [
-        "!python --version"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "i5dQTzU6fkvF",
+        "id": "xO1Mzw9ytZjU",
+        "outputId": "9f3cd7bd-0a42-4434-c1f7-8fc80eec6ba1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a078dec5-2dee-4d5c-a97a-45707b355663"
+        }
       },
-      "source": [
-        "print('Hello, World!')"
-      ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello, World!\n"
+            "124\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "Wl2BHoz3gD5H"
-      },
       "source": [
-        "print(10 * 'Hello, World!')"
+        "print(type(entero))"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "GuLtDXTGtdDM",
+        "outputId": "61ff8791-7d08-48a3-a192-5152300a2e63",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Tipo float"
+      ],
+      "metadata": {
+        "id": "OxlrU3cyuMmk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dolar = 19.94"
+      ],
+      "metadata": {
+        "id": "z3lbzYrGtrwA"
+      },
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "KW6Aru-tguob"
-      },
       "source": [
-        "print(10*'Hello, World! \\n')"
+        "print(dolar)"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "sL3quT1ptutM",
+        "outputId": "7e346127-5db5-4630-cc6a-00b0faf7c51b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "19.94\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(dolar))"
+      ],
+      "metadata": {
+        "id": "t2JeNBCkt1B2",
+        "outputId": "251a853e-e22e-4cb3-8ff6-f3d0e0f86844",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'float'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Tipo bool"
+      ],
+      "metadata": {
+        "id": "FJwbKG4guSDd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bebo_poco = True"
+      ],
+      "metadata": {
+        "id": "CRTByLzbt4Kx"
+      },
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "-xfYlbrpjcBk"
-      },
       "source": [
-        "world = 'world'\n",
-        "print(world)"
+        "print(bebo_poco)"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "AVcjHGWYt_cr",
+        "outputId": "e61ce30a-0ca9-4c79-8176-d2a478bd1137",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(bebo_poco))"
+      ],
+      "metadata": {
+        "id": "J7o4Fm3XuA_D",
+        "outputId": "49a64428-1b4f-466f-9f4e-54b4c393430a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'bool'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Tipo str"
+      ],
+      "metadata": {
+        "id": "J8xuyvN2uUj1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "capital_mexico = \"cdmx\""
+      ],
+      "metadata": {
+        "id": "PQw5jCwPuWGl"
+      },
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "kfObfgFQjdza"
-      },
       "source": [
-        "hello = 'hello'\n",
-        "helloworld = hello + \"_\" + world\n",
-        "print(helloworld)"
+        "capital_mexico = 'cdmx'"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "XHG6ikRauZVA"
+      },
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "uF_w1RG9jiz7"
-      },
       "source": [
-        "type(helloworld)"
+        "print(capital_mexico)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "A6zHpvkmubol",
+        "outputId": "f9fbf7bb-0eba-4b57-ffe4-417e4e38c542",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cdmx\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "8LZDfE1pjtiK"
-      },
       "source": [
-        "a, b, d = 2, 3, 5\n",
-        "c = a + b + d\n",
-        "print(c)"
+        "print(type(capital_mexico))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "KRDly-fduld2",
+        "outputId": "b9e63010-1030-4932-b5db-3b36572e4661",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'str'>\n"
+          ]
+        }
+      ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KHI43Yjwk3G8"
-      },
+      "cell_type": "markdown",
       "source": [
-        "one = 1\n",
-        "print(type(one))\n",
-        "one_str = str(1)\n",
-        "print(type(one_str))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DSJsnu3QlY3a"
-      },
-      "source": [
-        "one_str"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_vBnXJW2ne-P"
-      },
-      "source": [
-        "one = int('1')\n",
-        "type(one)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oBSqOMghj4qq"
-      },
-      "source": [
-        "# This will not work!\n",
-        "one = '1'\n",
-        "two = 2\n",
-        "hello = \"hello\"\n",
+        "## Casteo\n",
         "\n",
-        "# print(one + two + hello)"
+        "Nos permite convertir de un tipo de dato a otro. Para ello usamos **constructor functions**:\n",
+        "- int()\n",
+        "- float()\n",
+        "- str()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "F9PEnVRIxlaR"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "AJQwgPaeoSgZ"
-      },
       "source": [
-        "radius = float(input(\"Enter the radius:\"))"
+        "x = '2'\n",
+        "print(x)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "PWxOFceWx_y0",
+        "outputId": "a2302f64-18f4-4715-b686-b4714130f2dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "_4Y__wM2mjwO"
-      },
       "source": [
-        "print(type(radius))"
+        "print(x * 3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "NUeZMwpxyfXl",
+        "outputId": "c73805cd-c2c6-4f9a-e729-01e7dbad6edd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "222\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "y8jcaxdroZYy"
-      },
       "source": [
-        "area = (radius * radius) * 3.1415"
+        "y = 2\n",
+        "print(y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "x83RQgxOyLLl",
+        "outputId": "1f305db8-e3f9-4bf4-b74f-15e3c8b4c5bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "JXgzu1v5lYJ2"
-      },
       "source": [
-        "print(\"The area of a circle with radius\", radius,\"is:\",area)"
+        "x_int = int(x)"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "Ha0tjbqoyCvv"
+      },
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "Y8WVDg-isZdK"
-      },
       "source": [
-        "def print_welcome_text(name):\n",
-        "  \"\"\"Es una función que imprime algo\"\"\"\n",
-        "  print(f'{name} , te doy la bienvenida a este curso. Espero que aprendaas'\n",
-        "      'muucho y te inicie en la zenda del programador')"
+        "print(x_int)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "mGw9W3qfylp4",
+        "outputId": "f3488912-064b-41eb-85a7-a415848bd3b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "WTyvzFN1rJWr"
-      },
       "source": [
-        "for name_tmp in ['Martha', 'Violeta', 'Cuau']:\n",
-        "  print_welcome_text(name_tmp)"
+        "print(type(x_int))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "UnGRXuy4yGvu",
+        "outputId": "dce3f590-0a07-4247-d88c-44cec6ffe791",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Built-in Exceptions\n",
+        "Algunos errores de sintaxis levantaran una \"Excepción\".\n",
+        "\n",
+        "\n",
+        "- **NameError**: Ocurre cuando intetamos acceder a una variable o función que **aún no está definida**. \n",
+        "- **SyntaxError:** EOL while scanning string literal. EOL (End of line). Python llégo al final de una línea mientras pasaba por una cadena de caracteres. Recuerda siempre cerrar las \"comillas\".\n",
+        "- **SyntaxError:** unexpected EOF while parsing. Puede deberse a que no cerramos con un paréntesis."
+      ],
+      "metadata": {
+        "id": "HVajGk_nuy6R"
+      }
     },
     {
       "cell_type": "code",
+      "source": [
+        "Print()"
+      ],
       "metadata": {
-        "id": "0I4a2qWismbe"
+        "id": "teYP0AM0u3fv",
+        "outputId": "1de95489-5279-4c2d-fec5-6ce4bd97e397",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        }
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-16a7674feaa5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mPrint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'Print' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Hola, mundo)"
+      ],
+      "metadata": {
+        "id": "TTOVrt4Tv6h4",
+        "outputId": "917cb9a3-434d-4b9b-d0a1-343ac16bfd38",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-8ff7366cc425>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print('Hola, mundo)\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Hola, mundo'"
+      ],
+      "metadata": {
+        "id": "pJ1ZCCxTv-sq",
+        "outputId": "3e1c2970-25b4-4fc6-e7bc-88f67b43a73f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-227742645cdb>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print('Hola, mundo'\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio\n",
+        "\n",
+        "Ejecuta SIN errores el siguiente bloque de código:"
+      ],
+      "metadata": {
+        "id": "u7_rStJNxOFV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(area_circulo)\n",
+        "\n",
+        "pi = '3.1416'\n",
+        "radio = 2\n",
+        "\n",
+        "area_circulo = pi * radio * radio\n",
+        "\n",
+        "prinT('El área del circulo es: )"
+      ],
+      "metadata": {
+        "id": "3vg1VO3AxMVK",
+        "outputId": "46294d01-99cf-446b-d54f-9e63a4dd8114",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 224
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.14163.14163.14163.1416\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-9ad2021f74e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0marea_circulo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpi\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mradio\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mradio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprinT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'El área del circulo es: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'prinT' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
