--- a/1_Tipos_de_datos_básicos.ipynb
+++ b/1_Tipos_de_datos_básicos.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "mount_file_id": "1M0Bi6-x7TXZcIIGK32q-v4kPDE7QbWVL",
-      "authorship_tag": "ABX9TyNHgPGo353CUwGW7XRGUC7r",
+      "authorship_tag": "ABX9TyMdv40Ueoo8a3AdX+tjSDKL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +32,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Tipos de Datos\n",
+        "# Tipos de Datos\n",
         "\n",
         "Los tipos de datos son un conjunto de valores con características y propiedades determinadas. \n",
         "\n",
@@ -41,9 +42,16 @@
         "2. **Númericos:**\n",
         "  - **Enteros :** *int* = 10\n",
         "  - **Flotantes :** *float* = 10.4\n",
-        "3. **Cadenas de caracteres:** *str* = \"Hola, mundo!\"\n",
-        "\n",
-        "## Variables\n",
+        "3. **Cadenas de caracteres:** *str* = \"Hola, mundo!\""
+      ],
+      "metadata": {
+        "id": "APXg8hLYmKBs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Variables\n",
         "\n",
         "Es una \"caja\" en la que podemos guardar un valor. Esta \"caja\" tiene un espacio en la memoria.\n",
         "\n",
@@ -57,23 +65,38 @@
         "**Nombres NO válidos:**\n",
         "\n",
         "- Números: 1, 2, 3, ..., n\n",
-        "- Palabras **reservadas** o **integradas** (built-in) en Python: str, int, float, print\n",
-        "\n",
-        "\n",
-        "## Funciones\n",
+        "- Palabras **reservadas** o **integradas** (built-in) en Python: str, int, float, print"
+      ],
+      "metadata": {
+        "id": "oxkzSu-A4IXf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Funciones\n",
         "Son instrucciones de código reutilizables que llevan a cabo una tarea en particular\n",
         "\n",
         "1. **type** - Regresa el tipo de dato del objeto\n",
         "2. **print** - Función que envía la información solicitada a la ventana de consola"
       ],
       "metadata": {
-        "id": "APXg8hLYmKBs"
+        "id": "S-YitxWB4LJ_"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Tipo int"
+        "# Lab: Tipos de Datos"
+      ],
+      "metadata": {
+        "id": "XYfFbvFx4RCk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Tipo int"
       ],
       "metadata": {
         "id": "lSptwM-1uJpF"
@@ -115,7 +138,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Tipo float"
+        "## Tipo float"
       ],
       "metadata": {
         "id": "OxlrU3cyuMmk"
@@ -157,7 +180,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Tipo bool"
+        "## Tipo bool"
       ],
       "metadata": {
         "id": "FJwbKG4guSDd"
@@ -199,7 +222,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Tipo str"
+        "## Tipo str"
       ],
       "metadata": {
         "id": "J8xuyvN2uUj1"
@@ -332,9 +355,31 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "dolar = float(19.94)"
+      ],
+      "metadata": {
+        "id": "MrBK1IYm5TGP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(dolar))"
+      ],
+      "metadata": {
+        "id": "EhGW3xJg5XA_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "## Built-in Exceptions\n",
+        "# Built-in Exceptions\n",
         "Algunos errores de sintaxis levantaran una \"Excepción\".\n",
         "\n",
         "\n",
@@ -344,6 +389,15 @@
       ],
       "metadata": {
         "id": "HVajGk_nuy6R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## NameError"
+      ],
+      "metadata": {
+        "id": "Zl6l9Tow4BnC"
       }
     },
     {
@@ -358,6 +412,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## SyntaxError"
+      ],
+      "metadata": {
+        "id": "CPHc-Kqr4det"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Al no cerrar las comillas"
+      ],
+      "metadata": {
+        "id": "3-J0-3pP4iRQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print('Hola, mundo)"
@@ -367,6 +439,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Al no cerrar paréntesis"
+      ],
+      "metadata": {
+        "id": "Ob0Lqc4r4p78"
+      }
     },
     {
       "cell_type": "code",
@@ -382,9 +463,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Ejercicio\n",
+        "# Ejercicio\n",
         "\n",
-        "Ejecuta SIN errores el siguiente bloque de código:"
+        "Depurar el código, para ejecutar el siguiente bloque de código SIN errores.\n",
+        "\n",
+        "**Valor esperado:** 12.5664\n"
       ],
       "metadata": {
         "id": "u7_rStJNxOFV"
@@ -400,7 +483,7 @@
         "\n",
         "area_circulo = pi * radio * radio\n",
         "\n",
-        "prinT('El área del circulo es: )"
+        "prinT('El área del circulo es: \")"
       ],
       "metadata": {
         "id": "3vg1VO3AxMVK"
