Se agregaron ejercicios

--- a/1_Tipos_de_datos_básicos.ipynb
+++ b/1_Tipos_de_datos_básicos.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1M0Bi6-x7TXZcIIGK32q-v4kPDE7QbWVL",
-      "authorship_tag": "ABX9TyMdv40Ueoo8a3AdX+tjSDKL",
+      "authorship_tag": "ABX9TyPun8PoihDOqnQ8i93d1hoK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -379,34 +379,44 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Built-in Exceptions\n",
-        "Algunos errores de sintaxis levantaran una \"Excepción\".\n",
-        "\n",
-        "\n",
-        "- **NameError**: Ocurre cuando intetamos acceder a una variable o función que **aún no está definida**. \n",
-        "- **SyntaxError:** EOL while scanning string literal. EOL (End of line). Python llégo al final de una línea mientras pasaba por una cadena de caracteres. Recuerda siempre cerrar las \"comillas\".\n",
-        "- **SyntaxError:** unexpected EOF while parsing. Puede deberse a que no cerramos con un paréntesis."
+        "# Variables"
       ],
       "metadata": {
-        "id": "HVajGk_nuy6R"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## NameError"
-      ],
-      "metadata": {
-        "id": "Zl6l9Tow4BnC"
+        "id": "F-qys6ulAg-0"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "Print()"
+        "texto = \"Hola Mundo\" # Cadenas de caracteres o str\n",
+        "type(texto) # comprobar tipo de dato"
       ],
       "metadata": {
-        "id": "teYP0AM0u3fv"
+        "id": "W0D7vW_3Ak-F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero: int = 23 # número entero\n",
+        "type(numero) # comprobar tipo de dato"
+      ],
+      "metadata": {
+        "id": "LaUSuCUNAmA9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flotante = 23.01 # número flotante \n",
+        "type(flotante) # comprobar tipo de dato"
+      ],
+      "metadata": {
+        "id": "5b_K7qIbAnOi"
       },
       "execution_count": null,
       "outputs": []
@@ -414,28 +424,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## SyntaxError"
+        "### Asignación de múltiples valores a múltiples variables"
       ],
       "metadata": {
-        "id": "CPHc-Kqr4det"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Al no cerrar las comillas"
-      ],
-      "metadata": {
-        "id": "3-J0-3pP4iRQ"
+        "id": "reB7ttmkAoZm"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "print('Hola, mundo)"
+        "a = 5\n",
+        "b = 3.2\n",
+        "c = \"Hola\"\n",
+        "\n",
+        "print(a, type(a))\n",
+        "print(b, type(b))\n",
+        "print(c, type(c))"
       ],
       "metadata": {
-        "id": "TTOVrt4Tv6h4"
+        "id": "DwhEjBERAqHl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b, c = 5, 3.2, \"Hola\" \n",
+        "\n",
+        "print(a, type(a))\n",
+        "print(b, type(b))\n",
+        "print(c, type(c))"
+      ],
+      "metadata": {
+        "id": "UssWh5ZwAtEs"
       },
       "execution_count": null,
       "outputs": []
@@ -443,19 +465,50 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Al no cerrar paréntesis"
+        "Asignar el mismo valor a múltiples variables"
       ],
       "metadata": {
-        "id": "Ob0Lqc4r4p78"
+        "id": "k0nvWAnHAw0g"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "print('Hola, mundo'"
+        "x = True\n",
+        "y = True\n",
+        "z = True\n",
+        "\n",
+        "print(x, y, z, type(x), type(y), type(z))"
       ],
       "metadata": {
-        "id": "pJ1ZCCxTv-sq"
+        "id": "qSgCErHRAx0O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 'letra'\n",
+        "y = 'letra'\n",
+        "z = 'letra'\n",
+        "\n",
+        "print(x, y, z, type(x), type(y), type(z))"
+      ],
+      "metadata": {
+        "id": "pJl0WIjJA0Dc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = y = z = 'letra'\n",
+        "print(x, y, z, type(x), type(y), type(z))"
+      ],
+      "metadata": {
+        "id": "weINxEl5A2VV"
       },
       "execution_count": null,
       "outputs": []
@@ -463,33 +516,107 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Ejercicio\n",
-        "\n",
-        "Depurar el código, para ejecutar el siguiente bloque de código SIN errores.\n",
-        "\n",
-        "**Valor esperado:** 12.5664\n"
+        "# Ejercicios"
       ],
       "metadata": {
-        "id": "u7_rStJNxOFV"
+        "id": "dgLSTW9uBrfp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Crea la variable `hello_world` y asignale el valor `\"Hello, world!\"`. ¿Qué tipo de dato es?"
+      ],
+      "metadata": {
+        "id": "-Y0wTrxtB7P4"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "print(area_circulo)\n",
-        "\n",
-        "pi = '3.1416'\n",
-        "radio = 2\n",
-        "\n",
-        "area_circulo = pi * radio * radio\n",
-        "\n",
-        "prinT('El área del circulo es: \")"
+        "# Aquí va tu código"
       ],
       "metadata": {
-        "id": "3vg1VO3AxMVK"
+        "id": "HXmRmyIwB5oO"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. **Dato final** <br>\n",
+        "a) Crea la variable `numero_ocho` y asignale el valor `\"8\"` (**Observa** que el valor ocho se encuentra entre comillas). <br>\n",
+        "b) Realiza un **casteo**, para convertir un *string* a *integer*. <br>\n",
+        "c) Usa la función *type* y verifica que sea de tipo **int**"
+      ],
+      "metadata": {
+        "id": "fDRDn2rbB9y3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Aquí va tu código"
+      ],
+      "metadata": {
+        "id": "FGSoGtKGB9Cx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Crea tres variables y nombralas como quieras. \n",
+        "Asignales un valor tal que sumados den 13."
+      ],
+      "metadata": {
+        "id": "LRFndVgzCCa3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Aquí va tu código"
+      ],
+      "metadata": {
+        "id": "zpUvU1SHCEO2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Crea una variable de tipo *bool*"
+      ],
+      "metadata": {
+        "id": "rMzb8RmgCHRQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Aquí va tu código"
+      ],
+      "metadata": {
+        "id": "2cb5LeWGCGki"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. **Doble Casteo** <br>\n",
+        "a) Crea una variable de tipo int,<br>\n",
+        "b) Realiza un casteo para convertirlo a tipo float, <br>\n",
+        "c) y finalmente realiza otro casteo a tipo str"
+      ],
+      "metadata": {
+        "id": "2ft6Oe_7CJwh"
+      }
     }
   ]
 }
