--- a/1. Tipos de datos básicos.ipynb
+++ b/1. Tipos de datos básicos.ipynb
@@ -5,9 +5,8 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "mount_file_id": "1M0Bi6-x7TXZcIIGK32q-v4kPDE7QbWVL",
-      "authorship_tag": "ABX9TyPun8PoihDOqnQ8i93d1hoK",
+      "authorship_tag": "ABX9TyOf97UJNqKl1xsM6C1ZJL5h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/1. Tipos de datos b%C3%A1sicos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/1.%20Tipos%20de%20datos%20b%C3%A1sicos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -305,18 +304,6 @@
       ],
       "metadata": {
         "id": "NUeZMwpxyfXl"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y = 2\n",
-        "print(y)"
-      ],
-      "metadata": {
-        "id": "x83RQgxOyLLl"
       },
       "execution_count": null,
       "outputs": []
@@ -610,13 +597,25 @@
       "cell_type": "markdown",
       "source": [
         "5. **Doble Casteo** <br>\n",
-        "a) Crea una variable de tipo int,<br>\n",
+        "Convierte el string `\"2.0\"` a integer<br>\n",
+        "a) Crea una variable de tipo str,<br>\n",
         "b) Realiza un casteo para convertirlo a tipo float, <br>\n",
-        "c) y finalmente realiza otro casteo a tipo str"
+        "c) y finalmente realiza otro casteo a tipo int"
       ],
       "metadata": {
         "id": "2ft6Oe_7CJwh"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Aquí va tu código"
+      ],
+      "metadata": {
+        "id": "4SrdKt9KMp5E"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
