--- a/Entorno_de_ejecución.ipynb
+++ b/Entorno_de_ejecución.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIv5WutpwYHMHVCDPMRFTJ",
+      "authorship_tag": "ABX9TyNd733l/mkdgZlVp4yJf0bl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,26 +38,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zEufcSlyPxuM",
-        "outputId": "a9e27d5c-3ce3-48dd-cb5c-6566f21df91a"
+        "id": "zEufcSlyPxuM"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/usr/local/bin/python\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!which python"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python --version"
+      ],
+      "metadata": {
+        "id": "I8Bmsh6mTJUa"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -66,28 +65,103 @@
         "!grep MemTotal /proc/meminfo "
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1H3e1ZZXR7DH",
-        "outputId": "53a89ec4-acf9-47bd-ee96-cfc582acf87a"
+        "id": "1H3e1ZZXR7DH"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "MemTotal:       13297228 kB\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Creando una variable y restaurando runtime"
+      ],
+      "metadata": {
+        "id": "rNQrNWQVTUga"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "mi_variable = 2"
+      ],
       "metadata": {
-        "id": "xmnLZSuOSCtV"
+        "id": "Y471J-cvTTmW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(mi_variable)"
+      ],
+      "metadata": {
+        "id": "eLD6AhczTbWO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Beneficios de restaurar runtime\n",
+        "Si sobreescribes una palabra reservada (built-in) de python, podrías restaurar el entorno de ejecución"
+      ],
+      "metadata": {
+        "id": "Q0ZTLjPqTv5W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Hello, World!')"
+      ],
+      "metadata": {
+        "id": "mqeJZZhdUQUR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(print)"
+      ],
+      "metadata": {
+        "id": "mI_BxyKETvZK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print = \"Hello, Universe!\""
+      ],
+      "metadata": {
+        "id": "ywvFu5tYTunl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(print)"
+      ],
+      "metadata": {
+        "id": "JhBCEW-zT_lZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Hello, World!')"
+      ],
+      "metadata": {
+        "id": "vwZHPqvVUA-F"
       },
       "execution_count": null,
       "outputs": []
