--- a/2. Operadores.ipynb
+++ b/2. Operadores.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNQ+7ZW5qm0CK/B0m/r1N5L",
+      "authorship_tag": "ABX9TyMaxPSgUBJOtm4O38s+w+9U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/2. Operadores.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/2.%20Operadores.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1318,7 +1318,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5. Obtenen el resultado de 150 mod 16, e imprime el resultado. Resultado esperado: 3"
+        "5. Obtenen el resultado de 150 mod 16, e imprime el resultado. Resultado esperado: 6"
       ],
       "metadata": {
         "id": "uA58TZlDjhjg"
@@ -1330,7 +1330,7 @@
       "metadata": {
         "id": "QtHBNS4CjpQ2"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
