--- a/3. Condicionales.ipynb
+++ b/3. Condicionales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/HlEABMZq98Mak00SURXQ",
+      "authorship_tag": "ABX9TyOHfgYIXHKw/Z7WyPuBrYXP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/3. Condicionales.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/3.%20Condicionales.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -77,6 +77,10 @@
         "if condicion:\n",
         "    bloque de código que se ejecuta. \n",
         "\n",
+        "if True:\n",
+        "    bloque de código que se ejecuta.\n",
+        "    \n",
+        "\n",
         "# Nota: los guiones son una ayuda visual para identificar la identación.\n",
         "```"
       ],
@@ -121,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "NTyD6v-GiJV7"
       },
@@ -131,38 +135,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# accion == 'dormir'"
+        "accion = True\n",
+        "if accion:\n",
+        "  print('Se ejecuta este código')"
       ],
       "metadata": {
-        "id": "D8YfITnfthg7"
+        "id": "Y_Cy5VJ-0RMB"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "tengo_dinero = True\n",
-        "if tengo_dinero:\n",
-        "  print('Me compro pizza')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Y_Cy5VJ-0RMB",
-        "outputId": "f015c838-2af7-429e-c051-f21966672786"
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Me compro pizza\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -230,6 +211,25 @@
     {
       "cell_type": "code",
       "source": [
+        "accion = 'dormir'\n",
+        "# accion = 'levantarse'\n",
+        "\n",
+        "if accion == 'dormir':\n",
+        "  print('Llegaré tarde a trabajar')\n",
+        "elif accion == 'levantarse':\n",
+        "  print('LLegaré con sueño al trabajo')\n",
+        "else:\n",
+        "  print('Error: los valores aceptados son: `dormir` ó `levantarse`')"
+      ],
+      "metadata": {
+        "id": "iKC-y2bYfyRB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "temperatura = 15\n",
         "\n",
         "if temperatura < 0:\n",
@@ -240,22 +240,10 @@
         "  print('Hace calorcito')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5xZzWuIWzbTf",
-        "outputId": "e451b2d6-555c-49b0-b258-746506346e53"
+        "id": "5xZzWuIWzbTf"
       },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hace calorcito\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -318,157 +306,10 @@
         "                   ['Más de 3,000', '30 %']])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 175
-        },
-        "id": "c-ZfgqQ80p-2",
-        "outputId": "f8f59519-fd4f-471c-de99-1f4742794bba"
+        "id": "c-ZfgqQ80p-2"
       },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "              Ingresos Tasa impositiva\n",
-              "1       Menos de 1,000             5 %\n",
-              "2  Entre 1,000 y 2,000            15 %\n",
-              "3  Entre 2,000 y 3,000            20 %\n",
-              "4         Más de 3,000            30 %"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-0095771c-da51-4b5e-ae3d-6dca5d9dc489\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Ingresos</th>\n",
-              "      <th>Tasa impositiva</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Menos de 1,000</td>\n",
-              "      <td>5 %</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>Entre 1,000 y 2,000</td>\n",
-              "      <td>15 %</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>Entre 2,000 y 3,000</td>\n",
-              "      <td>20 %</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>Más de 3,000</td>\n",
-              "      <td>30 %</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0095771c-da51-4b5e-ae3d-6dca5d9dc489')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-0095771c-da51-4b5e-ae3d-6dca5d9dc489 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0095771c-da51-4b5e-ae3d-6dca5d9dc489');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -542,7 +383,7 @@
       "metadata": {
         "id": "IU5dDjDC3E5-"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -552,22 +393,10 @@
         "user = input('Ingrese su usuario: ')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3nkaOP0p30ED",
-        "outputId": "85c87857-da3d-4237-8aea-4a13d4b9c7be"
+        "id": "3nkaOP0p30ED"
       },
-      "execution_count": 35,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Ingrese su usuariocuau2077\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -575,22 +404,10 @@
         "print(user)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jja-Awol36gA",
-        "outputId": "74c8443d-c80e-45b7-d31d-e3b13806765f"
+        "id": "jja-Awol36gA"
       },
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "cuau2077\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -599,22 +416,10 @@
         "password = input('Ingrese su contraseña: ')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yCMPGTQ-38kA",
-        "outputId": "549c77e6-47eb-44e3-934d-37bcba6a8a45"
+        "id": "yCMPGTQ-38kA"
       },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Ingrese su contraseña: 1234\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -622,22 +427,10 @@
         "print(password)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kWXftA9k4CEO",
-        "outputId": "89541694-3ffe-4a4d-881c-ae841aab6a44"
+        "id": "kWXftA9k4CEO"
       },
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1234\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -645,22 +438,10 @@
         "print(type(password))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RutKeKas4EMq",
-        "outputId": "4483dae9-940e-4263-b625-cfb3c6f3d446"
+        "id": "RutKeKas4EMq"
       },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'str'>\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -674,22 +455,10 @@
         "  print('Verifique el nombre de usuario')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0IS_wUjMxwMo",
-        "outputId": "55abb7d7-cae5-4da1-e9f3-29eeb22de36e"
+        "id": "0IS_wUjMxwMo"
       },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "El usuario existe\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -706,23 +475,10 @@
         "  print('Verifique el nombre de usuario')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SX56wO7p3ac2",
-        "outputId": "8a8da35e-17ec-4186-a95b-ba1fba10ed65"
+        "id": "SX56wO7p3ac2"
       },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "El usuario existe\n",
-            "Iniciaste sesión exitosamente\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
